--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/PLA25/Sensors#readme",
   "dependencies": {
+    "express": "4.16.2",
+    "fast-haversine": "1.0.0",
     "socket.io": "2.0.4",
     "socket.io-client": "2.0.4"
   }
