--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "4.16.2",
     "fast-haversine": "1.0.0",
+    "node-geocoder": "3.22.0",
     "socket.io": "2.0.4",
     "socket.io-client": "2.0.4"
   }
