--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "sensors",
-  "version": "1.0.0",
-  "description": "",
-  "main": "client.js",
+  "name": "pds-server",
+  "version": "0.0.0",
+  "description": "Server side of the PolutionDetectionSystem",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
     "express": "4.16.2",
     "fast-haversine": "1.0.0",
     "node-geocoder": "3.22.0",
-    "socket.io": "2.0.4",
-    "socket.io-client": "2.0.4"
+    "socket.io": "2.0.4"
   }
 }
