--- a/server/config.js.example
+++ b/server/config.js.example
@@ -1,12 +1,5 @@
 'use strict';
 
 module.exports = {
-  GoogleKey: '',
-  MongoDB: {
-    Host: '',
-    Port: ,
-    User: '',
-    Pass: '',
-    Name: ''
-  }
+  Key: '',
 };
