--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/PLA25/Sensors#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "express": "4.16.2",
     "fast-haversine": "1.0.0",
     "mongoose": "5.0.7",
